fix broken star animations and unevenness

--- a/app/globals.css
+++ b/app/globals.css
@@ -504,6 +504,7 @@ div[data-youtube-video] iframe {
 
 .spin {
   animation-name: spin;
+  animation-duration: 4s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
 }
